--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@eslint/eslintrc": "^3.0.0",
     "@types/node": "22.15.3",
     "@types/react": "19.1.2",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.35",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
