--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "appwrite": "^14.0.1",
     "next": "14.1.0",
     "react": "^18.2.0",
