--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "resend": "^4.4.1"
+    "resend": "^4.4.1",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
