--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "appwrite": "^14.0.1",
     "next": "14.1.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^4.4.1",
